--- a/harikrishnan resume.html
+++ b/harikrishnan resume.html
@@ -12,7 +12,7 @@ table, th, td {
     <div id="topic" style="border:4px solid hsl(0, 0%, 3%); text-align:center;" >
         <h1 style="color: rgb(37, 104, 3);"><u><i>RESUME</font color></i></u></h1>
     </div>
-<img src= "photo.jpg" width="130px" height="140px" align ="right" alt="profile photo"/>
+<img src= "photo.png" width="130px" height="140px" align ="right" alt="profile photo"/>
 <h3>NAME</u>: Harikrishnan P</h3>
 <h3>EMAIL ID</u>: harikrishnanp.22it@kongu.edu</h3>
 <h3>ADDRESS</u>: 1/165,Pachinampatti,Selliyampatti(Post),Dharmapuri-636809</h3>
